--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 body {
-    background-color: #f8fafc;
     font-family: "Afacad Flux", serif;
 }
 #section1 {
@@ -18,6 +17,10 @@ body {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
+    background-color: #f8fafc;
+}
+div{
+    max-width: 800px;    
 }
 h1 {
     font-size: 2.25rem;
