--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 body {
     font-family: "Afacad Flux", serif;
+    background-color: #f8fafc;
 }
 #section1 {
     max-height: 200px;
@@ -17,10 +18,10 @@ body {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #f8fafc;
 }
-div{
-    max-width: 800px;    
+.div{
+    max-width: 800px;  
+    text-align: center;
 }
 h1 {
     font-size: 2.25rem;
