--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
 #section1 {
     max-height: 200px;
     width: 100vw;
+    display: grid;
+    place-items: center;
     text-align: center;
     background-color: white;
     padding: 35px;
